@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-17T01:39:19Z",
-  "count_outdated" : 1884,
-  "uniques_outdated" : 1123,
-  "count" : 1902,
-  "uniques" : 1141,
+  "timestamp" : "2025-07-18T01:39:43Z",
+  "count_outdated" : 1885,
+  "uniques_outdated" : 1124,
+  "count" : 1903,
+  "uniques" : 1142,
   "clones" : [
     {
-      "timestamp": "2025-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-07-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
