@@ -1,16 +1,11 @@
 {
-  "count": 18,
-  "uniques": 9,
+  "count": 17,
+  "uniques": 8,
   "clones": [
     {
-      "timestamp": "2025-07-03T00:00:00Z",
+      "timestamp": "2025-07-04T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2025-07-04T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-07-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
